--- a/src/main/webapp/vistas/notas/List.xhtml
+++ b/src/main/webapp/vistas/notas/List.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/templates/templateBase_1.xhtml">
+    <ui:composition template="/templates/templateBase.xhtml">
 
 
         <ui:define name="title">
