modificacion en logos  e iconos

--- a/src/main/webapp/vistas/Reportes/list_procesadas.xhtml
+++ b/src/main/webapp/vistas/Reportes/list_procesadas.xhtml
@@ -35,7 +35,7 @@
                                 <p:dataTable id="datalist" var="emIngE" value="#{reportesProcesadasController.resultadoContoller}">
                                     <f:facet name="footer">      
                                         <h:commandLink>
-                                            <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
+                                            <p:graphicImage library="images" name="excel-icon.png" styleClass="iconosDescarga"/>
                                             <p:dataExporter type="xls" target="datalist" fileName="reporteEntregadas" />
                                         </h:commandLink>
                                     </f:facet>
