--- a/src/main/webapp/vistas/Reportes/list_entregadas.xhtml
+++ b/src/main/webapp/vistas/Reportes/list_entregadas.xhtml
@@ -40,18 +40,18 @@
                                 </p:panel>
                         </p:panelGrid>
                             <center>
-                                <p:commandButton id="aceptar" value="Aceptar" update="@form" disabled="#{empty reportesController.fechafinal or empty reportesController.fechainicio or reportesController.fechainicio.after(reportesController.fechafinal)}" />
+                                <p:commandButton id="aceptar" value="Aceptar" update="@form" actionListener="#{reportesController.resetearFitrosTabla()}" disabled="#{empty reportesController.fechafinal or empty reportesController.fechainicio or reportesController.fechainicio.after(reportesController.fechafinal)}" />
                             <p:commandButton   value="Reset" actionListener="#{reportesController.reset()}"  update="@form"></p:commandButton>
                             </center>
                         <br/>
                                 <p:dataTable id="datalist" var="emIngE" value="#{reportesController.resultadoContoller}">
                                 <f:facet name="footer">      
                                     <h:commandLink>
-                                        <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
+                                        <p:graphicImage library="images" name="excel-icon.png" styleClass="iconosDescarga"/>
                                         <p:dataExporter type="xls" target="datalist" fileName="reporteEntregadas" />
                                     </h:commandLink>
                                 </f:facet>    
-                                    <p:column filterBy="#{emIngE[0]}" >
+                                    <p:column filterBy="#{emIngE[0]}">
                                         <f:facet name="header">
                                             <h:outputText value="#{reportesController.encabezadoTabla}"/>
                                         </f:facet>                                            
