--- a/src/main/webapp/vistas/Reportes/list_recibidas.xhtml
+++ b/src/main/webapp/vistas/Reportes/list_recibidas.xhtml
@@ -34,13 +34,13 @@
                                 <p:dataTable id="datalist" var="emIngE" value="#{reportesRecibidasController.resultadoContoller}">
                                     <f:facet name="footer">      
                                         <h:commandLink>
-                                            <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
+                                            <p:graphicImage library="images" name="excel-icon.png" styleClass="iconosDescarga"/>
                                             <p:dataExporter type="xls" target="datalist" fileName="reporteEntregadas" />
                                         </h:commandLink>
                                         <h:commandLink>
-                                            <p:graphicImage library="images" name="pdf_icon.png" styleClass="iconosDescarga"/>
+                                            <p:graphicImage library="images" name="pdf-icon.png" styleClass="iconosDescarga"/>
                                             <p:dataExporter type="pdf" target="datalist" fileName="reporteEntregadas" encoding="ISO-8859-1"
-		preProcessor="#{reportesRecibidasController.preProcessPDF}"/>
+                                                preProcessor="#{reportesRecibidasController.preProcessPDF}"/>
                                         </h:commandLink>
                                     </f:facet>
                                     <p:column>
@@ -65,7 +65,7 @@
                                 <h3 align="center">#{bundle.TotalImagenes}  #{reportesRecibidasController.getcalcularTotal()}</h3>
                                 <div class="ui-fluid">
                                     <p:chart widgetVar="chart" type="pie" model="#{reportesRecibidasController.grafica}" style="height:300px;margin:20px" responsive="true"/>                                 
-                                    <p:chart type="bar" model="#{reportesRecibidasController.horizontalGrafica}" style="height:300px;margin:20px 0" responsive="true"/>
+                                    <p:chart type="bar" model="#{reportesRecibidasController.horizontalGrafica}" style="height:300px;margin:20px" responsive="true"/>
                                 </div>
                         </p:panel>
                     </h:form>
