--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -31,7 +31,7 @@
                         </f:facet>
                         <f:facet name="footer">      
                             <h:commandLink>
-                                <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
+                                <p:graphicImage library="images" name="excel-icon.png" styleClass="iconosDescarga"/>
                                 <p:dataExporter type="xls" target="datalist" fileName="gestores"  />
                             </h:commandLink>
                         </f:facet>
