--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -63,6 +63,7 @@
                         </p:column>
                     </p:dataTable>  
                 </p:panel>
+                </h:form>:
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
