--- a/src/main/webapp/vistas/notas/List.xhtml
+++ b/src/main/webapp/vistas/notas/List.xhtml
@@ -23,11 +23,11 @@
                 <br/>
                 </p:panel>
                 <br/>
-                <p:panel header="#{bundle.ListNotasTitle}">
+                <p:panel header="#{notasController.tituloTabla}">
                        <p:contextMenu for="datalist">
-                            <p:menuitem id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":NotasViewForm" oncomplete="PF('NotasViewDialog').show()" disabled="#{empty notasController.selected}"/>
-                            <p:menuitem id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":NotasEditForm" oncomplete="PF('NotasEditDialog').show()" disabled="#{empty notasController.selected}"/>                           
-                            <p:menuitem id="verNota"   icon="ui-icon-pencil" value="No. imagen" update=":paginaNotaForm" oncomplete="PF('PaginaNotaFormDialog').show() #{notasController.informacionNota()}" disabled="#{empty notasController.selected}"/>
+                            <p:menuitem id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":NotasViewForm" oncomplete="PF('NotasViewDialog').show()" />
+                            <p:menuitem id="editButton"   icon="ui-icon-pencil" value="#{bundle.Create}" update=":NotasEditForm" oncomplete="PF('NotasEditDialog').show()" />                           
+                            <p:menuitem id="verNota"   icon="ui-icon-pencil" value="No. imagen" update=":paginaNotaForm" oncomplete="PF('PaginaNotaFormDialog').show()" actionListener="#{notasController.informacionNota()}"/>
                         </p:contextMenu>
                     <p:dataTable id="datalist" value="#{notasController.items}" var="item"
                                  selectionMode="single" selection="#{notasController.selected}"
@@ -155,5 +155,3 @@
             <ui:include src="paginaNota.xhtml"/>
         </ui:define>
     </ui:composition>
-
-</html>
