pruebas de notas

--- a/src/main/webapp/vistas/notas/List.xhtml
+++ b/src/main/webapp/vistas/notas/List.xhtml
@@ -128,11 +128,22 @@
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":NotasEditForm" oncomplete="PF('NotasEditDialog').show()" disabled="#{empty notasController.selected}"/>
                             <p:commandButton id="verNota"   icon="ui-icon-pencil" value="No. imagen" update=":paginaNotaForm" oncomplete="PF('PaginaNotaFormDialog').show() #{notasController.informacionNota()}" disabled="#{empty notasController.selected}"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{notasController.destroy}" update=":growl,datalist" disabled="#{empty notasController.selected}"/>
+                                                           <p:commandButton value="Download" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s" actionListener="#{notasController.descargar()}">
+                                     <p:fileDownload value="#{notasController.download}"  />
+                                </p:commandButton>
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
+                <script type="text/javascript">
+                function start() {
+                    PF('statusDialog').show();
+                }
 
+                function stop() {
+                    PF('statusDialog').hide();
+                }
+                </script>
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
